# rust-serial-controller

./: Cargo.toml  README.md  build.rs  tray.rc
.github/workflows/: build.yml
src/: main.rs  razer.rs  tpm2.rs  tray.rs  wled.rs
