[package]
name = "rust-serial-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
enum-display-derive = "0.1.1"
guid = "0.1.0"
lazy_static = "1.4.0"
libloading = "0.7.4"
palette = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serialport = "4.2.0"
tray-item = "0.7.1"
winrt-notification = "0.5.1"

[build-dependencies]
windres = "0.2.2"
