[package]
name = "rust-serial-controller"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"

[dependencies]
confy = "0.5.1"
enum-display-derive = "0.1.1"
guid = "0.1.0"
libloading = "0.7.4"
palette = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serialport = "4.2.0"
tray-item = "0.7.1"
winrt-notification = "0.5.1"

[build-dependencies]
windres = "0.2.2"
